@@ -6,6 +6,7 @@ Fixed:
 - Added "Nested" to Common.ARAttributes (Patch: Roberto Paterlini)
 - Swapped parameters in new ArgumentNullException (Patch: Roberto Paterlini)
 - Changed in-memory code compilation error reporting to give full details of the internal compile process. No more ExceptionCollection's.
+- Contrib-118: Activewriter errors in combination with VisualSVN (Patch: Visual SVN Team)
 
 Preview 4
 
